--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,16 +11,33 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.content{
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img-box{
+  box-sizing: border-box;
+  display: block;
+  padding: 15px 15px 0;
+  position: relative;
+}
+.img-box p {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 128px;
+  font-weight: bold;
+  margin: 0;
+  color: #ffffff;
+  text-shadow: 0 1px 0 #000, 0 -1px 0 #000, 1px 0 0 #000, -1px 0 #000;
+}
+.img-box .img-lazyload{
+  width: 100%;
+  display: block;
+  min-height: 240px;
+}
+.list-footer{
+  height: 15px;
 }
